--- a/aenimaFront/views/index.ejs
+++ b/aenimaFront/views/index.ejs
@@ -22,7 +22,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="newProductModal">New Product</h5>
+        <h5 class="modal-title" id="newProductModalTitle">New Product</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
