--- a/aenimaFront/views/index.ejs
+++ b/aenimaFront/views/index.ejs
@@ -18,11 +18,11 @@
   </div>
     </div>
 <!-- Modal -->
-<div class="modal fade large" id="newProductModal" tabindex="-1" role="dialog" aria-labelledby="newProductModal" aria-hidden="true">
+<div class="modal fade" id="newProductModal" tabindex="-1" role="dialog" aria-labelledby="newProductModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="newProductModalTitle">New Product</h5>
+        <h5 class="modal-title" id="newProductModalLabel">New Product</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
